fix white flash behind img on site load

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ html {
   }
 body {
     height: 100vh;
+    background-color: rgb(10,23,39);
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
